test/modules/use/topLevel/noUseTop2.good
noUseTop2.chpl:7: In module 'NNN':
noUseTop2.chpl:8: error: 'MMM' undeclared (first use this function)
